<resources>
    <string name="app_name">ParkirAssistant</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="no_identitas">No. Identitas (KTP/SIM)</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="no_plat">Nomor Plat</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="sync">Sync now</string>
    <string name="no">080xxxxxx123</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="parkir_assistant">PARKIR ASSISTANT</string>
    <string name="kembali">Kembali</string>
    <string name="profil">Profile</string>
    <string name="scan">Scan</string>
    <string name="pindai_qr_code">Pindai QR Code</string>
    <string name="keterangan_penggunaan">Keterangan penggunaan</string>
    <string name="channel_description">memunculkan notifikasi check in</string>
    <string name="channel_name">Notifikasi check in</string>

    <string-array name="no_parkir">
        <item>1C</item>
        <item>2C</item>
        <item>3C</item>
        <item>4C</item>
        <item>5C</item>
        <item>6C</item>
        <item>7C</item>
        <item>8C</item>
        <item>9C</item>
        <item>10C</item>
        <item>11C</item>
        <item>12C</item>
        <item>1M</item>
        <item>2M</item>
        <item>3M</item>
        <item>4M</item>
        <item>5M</item>
        <item>6M</item>
        <item>7M</item>
        <item>8M</item>
    </string-array>

</resources>