<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_asset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="220dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"/>


    <EditText
        android:id="@+id/input_nama"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_input"
        android:hint="@string/nama"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="255dp"
        android:background="@drawable/bg_input"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/input_pw"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="308dp"
        android:background="@drawable/bg_input"
        android:hint="@string/pw"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/input_no_id"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="362dp"
        android:background="@drawable/bg_input"
        android:hint="@string/no_identitas"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/no_telp"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="417dp"
        android:background="@drawable/bg_input"
        android:hint="@string/no_telepon"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/alamat"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="470dp"
        android:background="@drawable/bg_input"
        android:hint="@string/alamat"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/no_plat"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="525dp"
        android:background="@drawable/bg_input"
        android:hint="@string/no_plat"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/btn_signUp"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="645dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/poppins_bold"
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingLeft="20dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>