<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bg_asset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="220dp"
            android:layout_marginRight="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onClickBack">

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/back_arrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/back_arrow"/>

            <Space
                android:id="@+id/space"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/back_arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_toRightOf="@id/space"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/edit_profile_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Edit Profile"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>


        <EditText
            android:id="@+id/input_nama"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/bg_input"
            android:hint="@string/nama"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="255dp"
            android:background="@drawable/bg_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/input_pw"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="308dp"
            android:background="@drawable/bg_input"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/input_no_id"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="362dp"
            android:background="@drawable/bg_input"
            android:hint="@string/no_identitas"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/no_telp"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="417dp"
            android:background="@drawable/bg_input"
            android:hint="@string/no_telepon"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/alamat"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="470dp"
            android:background="@drawable/bg_input"
            android:hint="@string/alamat"
            android:inputType="text|textMultiLine"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/no_plat"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="525dp"
            android:background="@drawable/bg_input"
            android:hint="@string/no_plat"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="635dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Cancel"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="40dp"
            android:onClick="onClickCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="210dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="645dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/poppins_bold"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingLeft="25dp"
            android:text="Confirm"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>