<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_asset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="220dp"
            android:layout_marginRight="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onClickBack">

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/back_arrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/back_arrow"/>

            <Space
                android:id="@+id/space"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/back_arrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_toRightOf="@id/space"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/scan"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/pindai_qr_code"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/frame_layout_camera_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Frame untuk mengakses kamera  -->
        <FrameLayout
            android:id="@+id/frame_layout_camera_scan"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ulang_button"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Ulangi"
            android:textColor="@color/colorOption"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_layout_camera_scan" />

        <Button
            android:id="@+id/input_nomor_parkir_button_dialog"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorOption"
            android:text="Input Parkir"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ulang_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>